Added growth controller and a bunch of other stuff

--- a/src/main/resources/assets/herbocraft/lang/en_us.json
+++ b/src/main/resources/assets/herbocraft/lang/en_us.json
@@ -4,6 +4,7 @@
 	"item.herbocraft.turret_seed": "Turret Seed",
 	"item.herbocraft.turret_analyser": "Turret Analyser",
 	"block.herbocraft.sterilizer": "Plant Sterilizer",
+	"block.herbocraft.growth_controller": "Growth Controller",
 	"level_tooltips.health": "Health: %d",
 	"level_tooltips.attack_speed": "Attack Speed: %d",
 	"level_tooltips.damage": "Damage: %d",
