Pretty big update
Added crafts for items
Added two new Turrets
Added crafting items
Added seeds for plants

--- a/src/main/resources/assets/herbocraft/lang/en_us.json
+++ b/src/main/resources/assets/herbocraft/lang/en_us.json
@@ -1,10 +1,23 @@
 {
 	"itemGroup.herbocraft.herbo_group": "HerboCraft",
 	"item.herbocraft.watering_can": "Watering Can",
-	"item.herbocraft.turret_seed": "Turret Seed",
 	"item.herbocraft.turret_analyser": "Turret Analyser",
+	"item.herbocraft.diamond_gear": "Diamond Gear",
+	"item.herbocraft.diamond_plate": "Diamond Plating",
+	"item.herbocraft.gold_gear": "Gold Gear",
+	"item.herbocraft.gold_plate": "Gold Plating",
+	"item.herbocraft.iron_gear": "Iron Gear",
+	"item.herbocraft.iron_plate": "Iron Plating",
+	"item.herbocraft.tier1_upgrade": "Iron Upgrade",
+	"item.herbocraft.tier2_upgrade": "Gold Upgrade",
+	"item.herbocraft.tier3_upgrade": "Emerald Upgrade",
+	"item.herbocraft.tier4_upgrade": "Diamond Upgrade",
 	"block.herbocraft.sterilizer": "Plant Sterilizer",
 	"block.herbocraft.growth_controller": "Growth Controller",
+	"block.herbocraft.turret_seed": "Basic Turret Seed",
+	"block.herbocraft.reproducer": "Reproducer",
+	"block.herbocraft.machine_frame": "Machine Frame",
+	"block.herbocraft.upgrader": "Upgrader",
 	"level_tooltips.health": "Health: %d",
 	"level_tooltips.attack_speed": "Attack Speed: %d",
 	"level_tooltips.damage": "Damage: %d",
