--- a/src/main/resources/assets/herbocraft/lang/en_us.json
+++ b/src/main/resources/assets/herbocraft/lang/en_us.json
@@ -15,6 +15,8 @@
 	"block.herbocraft.sterilizer": "Plant Sterilizer",
 	"block.herbocraft.growth_controller": "Growth Controller",
 	"block.herbocraft.turret_seed": "Basic Turret Seed",
+	"block.herbocraft.snow_seed": "Snow Turret Seed",
+	"block.herbocraft.wither_seed": "Wither Turret Seed",
 	"block.herbocraft.reproducer": "Reproducer",
 	"block.herbocraft.machine_frame": "Machine Frame",
 	"block.herbocraft.upgrader": "Upgrader",
