--- a/src/main/resources/assets/herbocraft/lang/zh_cn.json
+++ b/src/main/resources/assets/herbocraft/lang/zh_cn.json
@@ -12,6 +12,7 @@
 	"item.herbocraft.tier2_upgrade": "金升级",
 	"item.herbocraft.tier3_upgrade": "绿宝石升级",
 	"item.herbocraft.tier4_upgrade": "钻石升级",
+	"item.herbocraft.manual": "遗传学家手册",
 	"block.herbocraft.sterilizer": "植物灭菌器",
 	"block.herbocraft.growth_controller": "生长调节器",
 	"block.herbocraft.turret_seed": "豌豆射手种子",
@@ -36,5 +37,6 @@
 	"entity.herbocraft.turret_base": "豌豆射手",
 	"entity.herbocraft.snow_turret": "寒冰射手",
 	"entity.herbocraft.wither_turret": "凋零射手",
+	"text.herbocraft.manual.landing": "欢迎您，学徒魔法师 ! $(br2) 本书将为您提供指导，帮助您安全地操纵植物遗传学.",
 	"upgrade.skipped_level": "你似乎跳级了！请先应用上一级"
 }
