--- a/src/main/resources/assets/herbocraft/lang/zh_cn.json
+++ b/src/main/resources/assets/herbocraft/lang/zh_cn.json
@@ -33,5 +33,9 @@
 	"level_tooltips.stability.extreme": "很高",
 	"level_tooltips.stability.unknown": "未知",
 	"level_tooltips.sterile.true": "已灭菌！",
+	"entity.herbocraft.turret_base": "豌豆射手",
+	"entity.herbocraft.snow_turret": "寒冰射手",
+	"entity.herbocraft.wither_turret": "凋零射手",
+	"text.herbocraft.manual.landing": "欢迎您，学徒魔法师 ! $(br2)本书将为您提供指导，帮助您安全地操纵植物遗传学.",
 	"upgrade.skipped_level": "你似乎跳级了！请先应用上一级"
 }
