--- a/src/main/resources/assets/herbocraft/lang/en_us.json
+++ b/src/main/resources/assets/herbocraft/lang/en_us.json
@@ -32,6 +32,7 @@
 	"level_tooltips.stability.high": "High",
 	"level_tooltips.stability.extreme": "Extreme",
 	"level_tooltips.stability.unknown": "Unknown",
+	"level_tooltips.unknown": "The plant seems totally new to you.",
 	"level_tooltips.sterile.true": "Sterile !",
 	"upgrade.skipped_level": "Seems like you skipped a level ! Please apply the previous ones before"
 }
